Curve vertex parent not working with animation #42257

Closed
opened 2014-10-16 15:01:39 +02:00 by Mikhail Rachinskiy · 7 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2
Vendor: NVIDIA Corporation
Version: 4.4.0

Blender Version
Broken: 2.72.1 4d4da31

Short description of error
Curve vertex parent not working with shape keys animation.

Exact steps for others to reproduce the error
Open blend file curve_vparent.blend and play animation.

Use case for this bugreport in motion graphic animation, here is simple example trail.blend where I managed to evade the issue by first animating MESH object, and then parent CURVE to it through vertex parent, using hooks. Could be a lot simpler if I could use vertex parent with curve directly.

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 Vendor: NVIDIA Corporation Version: 4.4.0 **Blender Version** Broken: 2.72.1 4d4da31 **Short description of error** Curve vertex parent not working with shape keys animation. **Exact steps for others to reproduce the error** Open blend file [curve_vparent.blend](https://archive.blender.org/developer/F117683/curve_vparent.blend) and play animation. Use case for this bugreport in motion graphic animation, here is simple example [trail.blend](https://archive.blender.org/developer/F117684/trail.blend) where I managed to evade the issue by first animating MESH object, and then parent CURVE to it through vertex parent, using hooks. Could be a lot simpler if I could use vertex parent with curve directly.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy
Sergey Sharybin was assigned by Bastien Montagne 2014-10-16 16:10:00 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Yeah… Also, vchildren of curves do not follow modifier's deformations…

Sergey, not sure whether these are known todo or what, but think it’s on your desk anyway. :)

Yeah… Also, vchildren of curves do not follow modifier's deformations… Sergey, not sure whether these are known todo or what, but think it’s on your desk anyway. :)

This issue was referenced by bae0f904ee

This issue was referenced by bae0f904eece736e27ab379d73d78ffd90de626e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bae0f904ee.

Closed by commit bae0f904ee.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42257
No description provided.